--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-
 	//oauth
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.security:spring-security-oauth2-client'
 	implementation 'org.springframework.security:spring-security-oauth2-jose'
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.7.0'
 
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
