--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,11 +6,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+    ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MariaDBDialect
+      dialect: org.hibernate.dialect.MariaDBDialect
     generate-ddl: false
   security:
     oauth2:
@@ -21,15 +21,16 @@ spring:
             client-secret: ${KAKAO_SECRET}
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
             authorization-grant-type: authorization_code
-            scope: profile_nickname, profile_image, account_email
+            scope: profile_nickname, account_email
             client-name: Kakao
+            client-authentication-method: client_secret_post
             provider: kakao
           naver:
             client-id: ${NAVER_CLIENT_ID}
             client-secret: ${NAVER_CLIENT_SECRET}
             redirect-uri: "{baseUrl}/login/oauth2/code/naver"
             authorization-grant-type: authorization_code
-            scope: name, email, profile_image
+            scope: name, email
             client-name: Naver
             provider: naver
         provider:
