--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/${DB_NAME}
-    username: ${USER_NAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://${RDS_ENDPOINT}:${DB_PORT}/${DATABASE_NAME}
+    username: ${RDS_USERNAME}
+    password: ${RDS-PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -10,7 +10,7 @@ spring:
       show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MariaDBDialect
+        dialect: org.hibernate.dialect.MySQLDialect
     generate-ddl: false
   security:
     oauth2:
