--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.7.0'
 	*/
-	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+	//compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
